--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "Editing Task") %>
 
 <section class="content-header">
-  <div class="col-md-6">
+  <div class="col-md-8 row">
     <%= form_for(@task) do |f| %>
         <div class="row">
           <div class="box box-primary ">
@@ -11,50 +11,50 @@
               </div>
               <%= render 'shared/task_error_messages' %>
               <div class="form-group row">
-                <%= f.label :id, class: 'col-sm-2 control-label' %>
-                <div class="col-sm-10">
+                <%= f.label :id, class: 'col-sm-3 control-label' %>
+                <div class="col-sm-9">
                   <%= f.number_field :id, readonly: true, class: 'form-control' %>
                 </div>
               </div>
               <div class="form-group row">
-                <%= f.label :project_id, class: 'col-sm-2 control-label' %>
-                <div class="col-sm-10">
+                <%= f.label :project_id, class: 'col-sm-3 control-label' %>
+                <div class="col-sm-9">
                   <%= f.collection_select :project_id, Project.order(:id), :id, :name, class: 'form-control' %>
                 </div>
               </div>
               <div class="form-group row">
-                <%= f.label :name, class: 'col-sm-2 control-label' %>
-                <div class="col-sm-10">
+                <%= f.label :name, class: 'col-sm-3 control-label' %>
+                <div class="col-sm-9">
                   <%= f.text_field :name, class: 'form-control' %>
                 </div>
               </div>
               <div class="form-group row">
-                <%= f.label :description, class: 'col-sm-2 control-label' %>
-                <div class="col-sm-10">
+                <%= f.label :description, class: 'col-sm-3 control-label' %>
+                <div class="col-sm-9">
                   <%= f.text_field :description, class: 'form-control' %>
                 </div>
               </div>
               <div class="form-group row">
-                <%= f.label 'Assignee', class: 'col-sm-2 control-label' %>
-                <div class="col-sm-10">
+                <%= f.label 'Assignee', class: 'col-sm-3 control-label' %>
+                <div class="col-sm-9">
                   <%= f.collection_select :user_id, User.order(:id), :id, :fullName, class: 'form-control' %>
                 </div>
               </div>
               <div class="form-group row">
-                <%= f.label :created_at, class: 'col-sm-2 control-label' %>
-                <div class="col-sm-10">
+                <%= f.label :created_at, class: 'col-sm-3 control-label' %>
+                <div class="col-sm-9">
                   <%= f.text_field :created_at, placeholder: :created_at, class: 'form-control', readonly: true, :data => {:provide => "datepicker"} %>
                 </div>
               </div>
               <div class="form-group row">
-                <%= f.label :estimate, class: 'col-sm-2 control-label' %>
-                <div class="col-sm-10">
+                <%= f.label :estimate, class: 'col-sm-3 control-label' %>
+                <div class="col-sm-9">
                   <%= f.number_field :estimate, class: 'form-control' %>
                 </div>
               </div>
               <div class="form-group row">
-                <%= f.label :task_state, class: 'col-sm-2 control-label' %>
-                <div class="col-sm-10">
+                <%= f.label :task_state, class: 'col-sm-3 control-label' %>
+                <div class="col-sm-9">
 
                   <%= f.select :task_state, options_for_select([["To Do", 0], ["In Progress", 1], ["Done", 2]]), class: 'form-control' %>
                 </div>
@@ -71,7 +71,6 @@
             </div>
           </div>
         </div>
-        </div>
     <% end %>
     </div>
-    </section>
+</section>
